--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": " ",
-  "description": " ",
+  "name": "BitStream",
+  "description": "An application that utilises WebTorrent to stream and download a torrent simultaneously.",
   "version": "0.1.0",
   "main": "main.js",
   "license": "MIT",
   "author": "Luka Kerr",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager ./ NAMEOFAPPHERE --platform=darwin --arch=x64 --version=1.4.3 --icon=./icon.icns"
+    "build": "electron-packager ./ BitStream --platform=darwin --arch=x64 --version=1.4.3 --icon=./icon.icns"
   },
   "devDependencies": {
     "electron-packager": "^8.1.0"
