--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"electron-packager": "^8.1.0"
 	},
 	"dependencies": {
-		"webtorrent": "^0.98.18",
-		"electron": "^1.6.2"
+		"electron": "^1.6.2",
+		"webtorrent": "^0.98.18"
 	}
 }
