--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
 	"license": "MIT",
 	"author": "Luka Kerr",
 	"scripts": {
-		"start": "electron .",
-		"build": "electron-packager ./ BitStream --platform=darwin --arch=x64 --version=1.0.1 --icon=./icon.icns"
-	},
-	"devDependencies": {
-		"electron-packager": "^8.1.0"
+		"start": "electron ."
 	},
 	"dependencies": {
-		"electron": "^1.6.2",
+		"electron-packager": "^8.1.0",
 		"webtorrent": "^0.98.18"
+	},
+	"devDependencies": {
+		"electron": "^1.6.11"
 	}
 }
