--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"electron-packager": "^8.1.0",
+		"electron-settings": "^3.1.1",
 		"webtorrent": "^0.98.18"
 	},
 	"devDependencies": {
